fix: Fix popup overflow scroll

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,13 +3,15 @@
   top: 0;
   left: 0;
   display: flex;
-  width: 100vw;
-  height: 100vh;
-  padding: 0 var(--inner-container-padding);
-  padding-top: 42px;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  min-height: 100vh;
+  padding: 42px var(--inner-container-padding);
   box-sizing: border-box;
   visibility: hidden;
   background-color: rgb(0 0 0 / 50%);
   opacity: 0;
   transition: all .4s ease-in-out;
+  overflow-y: auto;
 }
